--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,10 @@
     background: rgba(0, 0, 0, 0.4);
 }
 
+.CookieConsent.isHidden {
+    display: none;
+}
+
 .CookieConsent__content {
     box-sizing: border-box;
     max-width: 680px;
